# gb_cashback

./: .gitignore  README.md  dev.yml  gb_cashback.postman_collection.json  prod.yml  pyproject.toml  tox.ini
application/: .env  urls.py
application/apps/api/: apps.py
application/apps/api/v1/: urls.py
application/apps/api/v1/serializers/: dealer.py  error.py  order.py
application/apps/api/v1/views/: dealers.py  orders.py
application/apps/base/: apps.py  logs.py  models.py
application/apps/dealer/: apps.py  exceptions.py  models.py  schemas.py  services.py  utils.py
application/apps/dealer/fixtures/: dealer.json
application/apps/order/: apps.py  exceptions.py  models.py  schemas.py  services.py
application/apps/order/fixtures/: cashback_rules.json
application/apps/user/: apps.py  exceptions.py  managers.py  models.py
application/settings/: base.py
application/tests/integration/: conftest.py
application/tests/integration/api/v1/: test_dealer.py  test_order.py
application/tests/unit/dealer/: test_schemas.py  test_services.py  test_utils.py
application/tests/unit/order/: test_shemas.py
application/tests/unit/order/services/: test_accumulated_cashback.py  test_create_order.py
application/tests/unit/user/: test_manager.py
docker/dev/python/: Dockerfile  entrypoint.sh
docker/prod/nginx/: django_mysite.conf
docker/prod/python/: Dockerfile
