[tool.poetry]
name = "gb_cashback"
version = "0.1.0"
description = ""
authors = ["Aldo Soares <soares_aldo@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7, <3.9"
Django = "^3.2"
djangorestframework-simplejwt = "^5.2"
drf-yasg = "1.21"
pydantic = "^1.9"
email-validator = "^1.2"
requests = "^2.28"
gunicorn = "^20.1"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"
autoflake = "^1.4"
pytest = "^7.1"
pytest-mock = "^3.8"
pytest-cov = "^2.12.1"
mypy = "^0.910"
pytest-django = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
